# validation

./: CMakeLists.txt  compare_kpts.h  compare_kpts.inl  get_LCP.h  get_LCP.inl  get_mean_distance.h  get_mean_distance.inl  get_rmse.h  get_rmse.inl  main.cpp  main2.cpp  resolution.h  resolution.inl  valid_pavin
